[package]
name = "jmbg_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "^0", features = ["serde"] }
thiserror = "1.0"
num_enum = "0.5"
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
